# gtm-tag-checker

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  main.py
app/auth/: __init__.py  oauth.py  session.py
app/checks/: __init__.py  duplicate.py  firing.py  models.py  naming.py  unused.py
app/ga/: __init__.py  checker.py  client.py  data_client.py  page_checker.py
app/gtm/: client.py  models.py
app/templates/: base.html  error.html  index.html  login.html  report.html
tests/: test_checks.py
